refs #177 - bumper accepts POST and GET requests